# Google-OIDC-Login-Python-Example

./: .gitignore  README.md  example.env  main.py  oidc.py  pyproject.toml
templates/: homepage.html  profile.html
